5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1684_1105.log
== TEST (2019-04-29 16:39:42) 
-- CODE:
a=input("quala sua casa em got ? ")
b=("Entrada:")
if(a=="lobo")
	print(b, "Stark")
-- ERROR:
File "XXXX", line 3
    if(a=="lobo")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:41:20) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo")
	print(b, "Stark")
	print(c,a)

-- ERROR:
File "XXXX", line 4
    if(a=="lobo")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:43:25) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, "Stark")
	print(c,a)
elif(a==leao)
	print(b, "Lannister")

-- ERROR:
File "XXXX", line 7
    elif(a==leao)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:43:31) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, "Stark")
	print(c,a)
elif(a==leao):
	print(b, "Lannister")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(a==leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:43:49) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, "Stark")
	print(c,a)
elif(a==leao):
	print(b, "Lannister")

-- EXECUTION TIME:
0.18087
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1105/main.py", line 7, in <module>
    elif(a==leao):
NameError: name 'leao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:43:56) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, "Stark")
	print(c,a)
elif(a==leao):
	print(b, "Lannister")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(a==leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:44:28) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a==leao):
	print(b, "Lannister")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(a==leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:51:59) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a==leao):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado")
	print(b, a)
	print(c,"Bolton")
elif(a=="turta")
	print(b, a)
	print(c,"Tully")

-- EXECUTION TIME:
0.135321
-- ERROR:
  File "/home/codebench/codes/1684/1105/main.py", line 25
    elif(a=="Esfolado")
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:52:52) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a==leao):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado")
	print(b, a)
	print(c,"Bolton")
elif(a=="turta")
	print(b, a)
	print(c,"Tully")
else:
	print(b, a)
	print(c,"invalida")

-- ERROR:
File "XXXX", line 25
    elif(a=="Esfolado")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:53:05) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a==leao):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
else:
	print(b, a)
	print(c,"invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(a==leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:53:25) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
else:
	print(b, a)
	print(c,"invalida")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:53:33) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
else:
	print(b, a)
	print(c,"invalida")

-- EXECUTION TIME:
0.113522
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: invalida
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:53:46) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
else:
	print(b, a)
	print(c,"invalida")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:54:36) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
else:
	print(b, a)
	print(c,"invalida")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:54:46) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
else:
	print(b, a)
	print(c,"invalida")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:54:52) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
else:
	print(b, a)
	print(c,"invalida")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:13) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")

-- EXECUTION TIME:
0.165582
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:00:49) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
elif(a!="lobo") and (a!="leao") and (a!="veado") and (a!="dragao") and (a!="rosa") and (a!="sol") and (a!="lula") and (a!="esfolado") and (a!="turta")
	print(b, a)
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 31
    elif(a!="lobo") and (a!="leao") and (a!="veado") and (a!="dragao") and (a!="rosa") and (a!="sol") and (a!="lula") and (a!="esfolado") and (a!="turta")
                                                                                                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:00:58) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
elif(a!="lobo") and (a!="leao") and (a!="veado") and (a!="dragao") and (a!="rosa") and (a!="sol") and (a!="lula") and (a!="esfolado") and (a!="turta"):
	print(b, a)
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:01:09) 
-- CODE:
a=input("qual o brasao da sua casa em got ? ")
b=("Entrada:")
c=("Casa:")
if(a=="lobo"):
	print(b, a)
	print(c,"Stark")
elif(a=="leao"):
	print(b, a)
	print(c,"Lannister")
elif(a=="veado"):
	print(b, a)
	print(c,"Baratheon")
elif(a=="dragao"):
	print(b, a)
	print(c,"Targaryen")
elif(a=="rosa"):
	print(b, a)
	print(c,"Tyrell")
elif(a=="sol"):
	print(b, a)
	print(c,"Martell")
elif(a=="lula"):
	print(b, a)
	print(c,"Greyjoy")
elif(a=="Esfolado"):
	print(b, a)
	print(c,"Bolton")
elif(a=="turta"):
	print(b, a)
	print(c,"Tully")
elif(a!="lobo") and (a!="leao") and (a!="veado") and (a!="dragao") and (a!="rosa") and (a!="sol") and (a!="lula") and (a!="esfolado") and (a!="turta"):
	print(b, a)
	print("Brasao invalido")

-- EXECUTION TIME:
0.146954
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
